aligning fix

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@
   justify-content: space-between;
   align-items: center;
 
-  min-height: 100vh;
 }
 
 .app__wrapper_info {
